perf(vm): split dispatch loop under HugeMethodLimit, hoisted callstate, and int-keyed fast lanes